--- a/app/index.html
+++ b/app/index.html
@@ -37,108 +37,6 @@
         <!-- 单页应用程序首页、列表页、详情页展示的位置 -->
         <div ng-view></div>
 
-        <!--电影列表开始-->
-        <div class="list">
-            <ul>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/sc.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>古装</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/sc.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>古装</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/sc.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>古装</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/sc.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>古装</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/sc.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>古装</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/aizaishenqiu.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>爱情</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/aizaishenqiu.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>爱情</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/aizaishenqiu.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>爱情</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/aizaishenqiu.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>爱情</span></div>
-                    </div>
-                </li>
-                <li>
-                    <a href="#/details">
-                        <img src="assets/img/aizaishenqiu.jpg" alt="">
-                    </a>
-                    <div class="meta">
-                        <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                        <div class="otherinfo">类型:<span>爱情</span></div>
-                    </div>
-                </li>
-            </ul>
-            <div class="paging">
-                <label>总共：0条记录,第0/0页;</label>
-                <!-- 加上disable类样式，表示按钮禁用状态 -->
-                <button class="prev disable ">上一页</button>
-                <button class="next">下一页</button>
-            </div>
-        </div>
-        <!--电影列表结束-->
 
         <!-- 电影详情开始 -->
         <div class="detail">
@@ -179,6 +77,9 @@
     <script type="text/javascript" src="../node_modules/angular-route/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript" src="home/module.js"></script>
+    <script type="text/javascript" src="in_theaters/module.js"></script>
+    <script type="text/javascript" src="coming_soon/module.js"></script>
+    <script type="text/javascript" src="top250/module.js"></script>
 </body>
 
 </html>
