--- a/app/in_theaters/view.html
+++ b/app/in_theaters/view.html
@@ -1,94 +1,14 @@
-<!--电影列表开始-->
+<!-- 电影列表开始-->
+<!-- 4-2 将数据遍历放在模板中 -->
 <div class="list">
     <ul>
-        <li>
+        <li ng-repeat="item in movie.subjects">
             <a href="#/details">
-                <img src="assets/img/sc.jpg" alt="">
+                <img ng-src="{{item.images.large}}" alt="">
             </a>
             <div class="meta">
-                <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>古装</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/sc.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>古装</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/sc.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>古装</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/sc.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>古装</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/sc.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>乾隆秘史</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>古装</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/aizaishenqiu.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>爱情</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/aizaishenqiu.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>爱情</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/aizaishenqiu.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>爱情</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/aizaishenqiu.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>爱情</span></div>
-            </div>
-        </li>
-        <li>
-            <a href="#/details">
-                <img src="assets/img/aizaishenqiu.jpg" alt="">
-            </a>
-            <div class="meta">
-                <h4><span>爱在深秋</span> <em>9.9分</em></h4>
-                <div class="otherinfo">类型:<span>爱情</span></div>
+                <h4><span>{{item.title}}</span> <em>{{item.rating.average}}分</em></h4>
+                <div class="otherinfo">类型:<span ng-repeat="gen in item.genres">{{gen}}</span></div>
             </div>
         </li>
     </ul>
@@ -99,4 +19,4 @@
         <button class="next">下一页</button>
     </div>
 </div>
-<!--电影列表结束-->
+<!--电影列表结束
