--- a/app/index.html
+++ b/app/index.html
@@ -80,6 +80,7 @@
     <script type="text/javascript" src="in_theaters/module.js"></script>
     <script type="text/javascript" src="coming_soon/module.js"></script>
     <script type="text/javascript" src="top250/module.js"></script>
+    <script type="text/javascript" src="common/JSONP.js"></script>
 </body>
 
 </html>
