--- a/app/coming_soon/view.html
+++ b/app/coming_soon/view.html
@@ -1,4 +1,5 @@
-<!--电影列表开始-->
+<!-- 电影列表开始-->
+<!-- 4-2 将数据遍历放在模板中 -->
 <div class="list">
     <ul>
         <li ng-repeat="item in movie.subjects">
@@ -12,10 +13,10 @@
         </li>
     </ul>
     <div class="paging">
-        <label>总共：0条记录,第0/0页;</label>
+        <label>总共：{{movie.total}}条记录,第{{curPage}}/{{totalPages}}页;</label>
         <!-- 加上disable类样式，表示按钮禁用状态 -->
-        <button class="prev disable ">上一页</button>
-        <button class="next">下一页</button>
+        <button class="prev" ng-class="{disable: +curPage===1}" ng-click="goPages(curPage-1)">上一页</button>
+        <button class="next" ng-class="{disable: +curPage===totalPages}" ng-click="goPages(curPage-0+1)">下一页</button>
     </div>
 </div>
 <!--电影列表结束-->
