11-将正在热映 / 即将上映 / top250整合到一起

--- a/app/index.html
+++ b/app/index.html
@@ -77,10 +77,10 @@
     <script type="text/javascript" src="../node_modules/angular-route/angular-route.min.js"></script>
     <script src="app.js"></script>
     <script type="text/javascript" src="home/module.js"></script>
-    <script type="text/javascript" src="in_theaters/module.js"></script>
+    <!-- <script type="text/javascript" src="in_theaters/module.js"></script>
     <script type="text/javascript" src="coming_soon/module.js"></script>
-    <script type="text/javascript" src="top250/module.js"></script>
+    <script type="text/javascript" src="top250/module.js"></script> -->
     <script type="text/javascript" src="common/JSONP.js"></script>
+    <script type="text/javascript" src="movie_list/module.js"></script>
 </body>
-
 </html>
